# src/main/kotlin/com/evandhardspace/movie/server/domain/model/User.kt
@@ -5,5 +5,5 @@ import java.util.UUID
 data class User(
     val id: UUID,
     val email: String,
-    val isAdmin: Boolean,
+    val role: UserRole,
 )
